# EyeTER

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  README.md  README.org
cmake/: FindQScintilla.cmake
include/: ChartWidget.h  Editor.h  EditorMarginArea.h  GraphicWindow.h  Highlighter.h  HistogramWindow.h  MainWindow.h  OpenGLWidget.h  OperatorModel.h  ProgramEditorWidget.h
src/: CMakeLists.txt  ChartWidget.cpp  Editor.cpp  EyeTERApp.cpp  EyeTERApp.h  GLPane.cpp  GLPane.h  GraphicFrame.cpp  GraphicFrame.h  GraphicWindow.cpp  Highlighter.cpp  HistogramWindow.cpp  MainFrame.cpp  MainFrame.h  MainWindow.cpp  OpenGLWidget.cpp  OperatorModel.cpp  ProgramEditorWidget.cpp  main.cpp
